--- a/ex_04_model_serving_challenges.ipynb
+++ b/ex_04_model_serving_challenges.ipynb
@@ -428,7 +428,7 @@
     "Here are some things you can try:\n",
     "\n",
     "1. Add a function, deploy, and send requests.\n",
-    "2. Add a classs, deploy, and send requests"
+    "2. Add a class, deploy, and send requests"
    ]
   }
  ],
