--- a/ex_04_model_serving_challenges.ipynb
+++ b/ex_04_model_serving_challenges.ipynb
@@ -434,10 +434,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "61420f179f1d72f6f62491b11dfaa5fd67c2474ea635dacab21b492153553544"
+   "hash": "7870826f35578f78988c006074c778c7fb98b01979d0d06d7a011367199c39c2"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('raylatest')",
+   "display_name": "Python 3.8.13 ('ray-core-serve-tutorial')",
    "language": "python",
    "name": "python3"
   },
@@ -451,7 +451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
