Fix typos in Ex 05

--- a/ex_05_ray_serve_create_and_access_deployments.ipynb
+++ b/ex_05_ray_serve_create_and_access_deployments.ipynb
@@ -13,7 +13,7 @@
     "deployment models, using the simple Ray Serve deployment APIs.\n",
     "Once deployed, you can send requests to deployments via two methods:\n",
     "\n",
-    " 1. ServerHandle API gives you control and pythonic iterface to your depoyments\n",
+    " 1. ServeHandle API gives you control and pythonic interface to your deployments\n",
     " 2. HTTP offers an HTTP client and web interface to access your deployments. This could be suitable for web application sending an HTTP request to your model deployment\n",
     " \n",
     " <img src=\"images/func_class_deployment_2.png\" width=\"80%\" height=\"50%\">"
@@ -136,7 +136,7 @@
    "metadata": {},
    "source": [
     "Create two distinct deployments of the same class as two replicas. \n",
-    "Associate each deployment with a unique 'name'.This name can be used as to fetch its respective serve handle.\n",
+    "Associate each deployment with a unique 'name'. This name can be used as to fetch its respective ServeHandle.\n",
     "See code below for method 1."
    ]
   },
@@ -170,7 +170,7 @@
    "id": "1afacbbf-e3ad-4312-8d53-39ac90d81a2b",
    "metadata": {},
    "source": [
-    "### Get the current list of deployment\n"
+    "### Get the current list of deployments\n"
    ]
   },
   {
@@ -196,7 +196,7 @@
    "id": "3d5b149f-b36f-44d5-9fdf-e04d3162a9ed",
    "metadata": {},
    "source": [
-    "### Method 1: Access each deployment using the ServerHandle API"
+    "### Method 1: Access each deployment using the ServeHandle API"
    ]
   },
   {
@@ -311,7 +311,7 @@
     "Here are some things you can try:\n",
     "\n",
     "1. For each method, send ten requests\n",
-    "2. Increase number of replicas\n",
+    "2. Increase the number of replicas\n",
     "3. Do requests get sent to different replicas? (check the pids or the Ray Dashboard)"
    ]
   }
