--- a/ex_05_ray_serve_create_and_access_deployments.ipynb
+++ b/ex_05_ray_serve_create_and_access_deployments.ipynb
@@ -13,7 +13,7 @@
     "deployment models, using the simple Ray Serve deployment APIs.\n",
     "Once deployed, you can send requests to deployments via two methods:\n",
     "\n",
-    " 1. ServeHandle API gives you control and pythonic interface to your deployments\n",
+    " 1. ServeHandle API gives you control and a pythonic interface to your deployments\n",
     " 2. HTTP offers an HTTP client and web interface to access your deployments. This could be suitable for web application sending an HTTP request to your model deployment\n",
     " \n",
     " <img src=\"images/func_class_deployment_2.png\" width=\"80%\" height=\"50%\">"
