--- a/ex_07_ray_serve_mlflow.ipynb
+++ b/ex_07_ray_serve_mlflow.ipynb
@@ -18,9 +18,9 @@
     "We are going to follow few simple steps:\n",
     "\n",
     "1. Train a scikit-learn classification model\n",
-    "2. Use MLflow `autolog()` method to automatically logs all metrics, parameters, artifacts, and the model\n",
+    "2. Use MLflow `autolog()` method to automatically log all metrics, parameters, artifacts, and the model\n",
     "3. Create a deployment class and deploy the model for serving\n",
-    "4. Deploy and Serve the model"
+    "4. Deploy and serve the model"
    ]
   },
   {
@@ -146,7 +146,7 @@
     "            payload[\"petal width\"],\n",
     "        ]\n",
     "\n",
-    "        # Convert the input vector in a Pandas DataFrame for prediction since\n",
+    "        # Convert the input vector to a Pandas DataFrame for prediction since\n",
     "        # an MLflow PythonFunc model, model.predict(...), takes pandas DataFrame\n",
     "        prediction = self.model.predict(pd.DataFrame([input_vector]))[0]\n",
     "        human_name = self.label_list[prediction]\n",
@@ -159,7 +159,7 @@
    "metadata": {},
    "source": [
     "Train and save the model artifacts in MLflow.\n",
-    "Here our MLflow model registry is local file directory `./mlruns`"
+    "Here our MLflow model registry is the local file directory `./mlruns`"
    ]
   },
   {
@@ -351,7 +351,7 @@
    "source": [
     "### Homework\n",
     "\n",
-    "* Try these tutorials with Ray Serve"
+    "* Try the tutorials below with Ray Serve"
    ]
   },
   {
@@ -366,7 +366,7 @@
     " * [PyTorch Tutorial](https://docs.ray.io/en/latest/serve/tutorials/pytorch.html#serve-pytorch-tutorial)\n",
     " * [Scikit-Learn Tutorial](https://docs.ray.io/en/latest/serve/tutorials/sklearn.html#serve-sklearn-tutorial)\n",
     " * [Keras and Tensorflow Tutorial](https://docs.ray.io/en/latest/serve/tutorials/tensorflow.html#serve-tensorflow-tutorial)\n",
-    " * [Ray Serve MLflow Deployment Pluggin](https://github.com/ray-project/mlflow-ray-serve)\n"
+    " * [Ray Serve MLflow Deployment Plugin](https://github.com/ray-project/mlflow-ray-serve)\n"
    ]
   }
  ],
