--- a/ex_09_ray_serve_end_to_end.ipynb
+++ b/ex_09_ray_serve_end_to_end.ipynb
@@ -19,7 +19,7 @@
     "4. Use ASHAscheduler to use early-stopping\n",
     "5. Save the best trial model\n",
     "6. Fetch the best saved model\n",
-    "7. Run some predicitons\n",
+    "7. Run some predictions\n",
     "8. Create deployment and deploy the best trained model to Ray Serve\n",
     "9. Send request for inference\n"
    ]
@@ -35,7 +35,7 @@
     "\n",
     "XGBoost is currently one of the most popular machine learning algorithms for regression and classification. It performs very well on a large selection of tasks, and is the key to success in many Kaggle competitions.\n",
     "\n",
-    "Derived maily from [documentaton](https://docs.ray.io/en/latest/tune/tutorials/tune-xgboost.html), this tutorial will give you a quick introduction to XGBoost, show you how to train an XGBoost model, and then guide you on how to optimize XGBoost parameters using Ray Tune to get the best performance. In particular, we will cover the following:\n",
+    "Derived mainly from [documentaton](https://docs.ray.io/en/latest/tune/tutorials/tune-xgboost.html), this tutorial will give you a quick introduction to XGBoost, show you how to train an XGBoost model, and then guide you on how to optimize XGBoost parameters using Ray Tune to get the best performance. In particular, we will cover the following:\n",
     "\n",
     " * What is XGBoost\n",
     " * Training a simple XGBoost classifier\n",
@@ -52,7 +52,7 @@
    "metadata": {},
    "source": [
     "### What is XGBoost\n",
-    "XGBoost is an acronym for eXtreme Gradient Boosting. Internally, XGBoost uses decision trees. Instead of training just one large decision tree, XGBoost and other related algorithms train many small decision trees. The intuition behind this is that even though single decision trees can be inaccurate and suffer from high variance, combining the output of a large number of these weak learners can actually lead to strong learner, resulting in better predictions and less variance.\n",
+    "XGBoost is an acronym for eXtreme Gradient Boosting. Internally, XGBoost uses decision trees. Instead of training just one large decision tree, XGBoost and other related algorithms train many small decision trees. The intuition behind this is that even though single decision trees can be inaccurate and suffer from high variance, combining the output of a large number of these weak learners can actually lead to a strong learner, resulting in better predictions and less variance.\n",
     "\n",
     "<img src=\"https://docs.ray.io/en/latest/_images/tune-xgboost-ensemble.svg\" width=\"70%\" height=\"50%\"> \n",
     "\n",
@@ -140,7 +140,7 @@
    "id": "83ae2490-ca85-4fb4-b69f-8273e799bad1",
    "metadata": {},
    "source": [
-    "### Step 1: Train the base line model\n",
+    "### Step 1: Train the baseline model\n",
     "\n",
     "Let's define our standard or regular XGBoost trainer (function). It takes in XGBoost configuration parameters."
    ]
@@ -236,7 +236,7 @@
    "id": "fee4289e-bb0b-48e7-8333-7f58c72033b9",
    "metadata": {},
    "source": [
-    "As you can see, the code is quite simple. First, the dataset is loaded and split into a test and train set. The XGBoost model is trained with `xgb.train()`. XGBoost automatically evaluates metrics we specified on the test set. In our case it calculates the `logloss` and the prediction error, which is the percentage of misclassified examples. To calculate the accuracy, we just have to subtract the error from 1.0. Even in this simple example, most runs result in a good accuracy of over 0.90.\n",
+    "As you can see, the code is quite simple. First, the dataset is loaded and split into a test and train set. The XGBoost model is trained with `xgb.train()`. XGBoost automatically evaluates metrics we specified on the test set. In our case it calculates the `logloss` and the prediction error, which is the percentage of misclassified examples. To calculate the accuracy, we just have to subtract the error from 1.0. In this simple example, most runs result in an accuracy of about 0.75.\n",
     "\n",
     "What if you want further accuracy, or want to use XGBoost's additional parameters?"
    ]
@@ -255,7 +255,7 @@
     "\n",
     "<img src=\"https://docs.ray.io/en/latest/_images/tune-xgboost-depth.svg\" width=\"30%\" height=\"10%\">\n",
     "\n",
-    "In this image, the left tree has a depth of 2, and the right tree a depth of 3. Note that with each level, 2(𝑑−1) splits are added, where d is the depth of the tree.¶\n",
+    "In this image, the left tree has a depth of 2, and the right tree a depth of 3. Note that with each level, 2^(𝑑−1) splits are added, where d is the depth of the tree.¶\n",
     "\n",
     "Tree depth is a property that concerns the model complexity. If you only allow short trees, the models are likely not very precise - they underfit the data. If you allow very large trees, the single models are likely to overfit to the data. In practice, a number between 2 and 6 is often a good starting point for this parameter.\n",
     "\n",
@@ -403,7 +403,7 @@
    "id": "7c823223-d24d-452a-aab2-fe05160eb16c",
    "metadata": {},
    "source": [
-    "Add tune report to our XGBoost training function"
+    "Add tune report to our XGBoost training function:"
    ]
   },
   {
@@ -468,7 +468,7 @@
    "source": [
     "### Use Ray Tune parallelize our Hyperparameters tuning\n",
     "\n",
-    "This is automatically launch a Ray cluster on your laptop and schedule tasks. The `num_samples=10` option we pass to tune.run() means that we sample 10 different hyperparameter configurations from this search space, run across 10 CPUs"
+    "This will automatically launch a Ray cluster on your laptop and schedule tasks. The `num_samples=10` option we pass to `tune.run()` means that we sample 10 different hyperparameter configurations from this search space, run across 10 CPUs"
    ]
   },
   {
@@ -521,7 +521,7 @@
     }
    ],
    "source": [
-    "print(\"Best Hyperparamter config: \", analysis.get_best_config(metric=\"mean_accuracy\", mode=\"min\"))"
+    "print(\"Best Hyperparameter config: \", analysis.get_best_config(metric=\"mean_accuracy\", mode=\"min\"))"
    ]
   },
   {
@@ -531,7 +531,7 @@
    "source": [
     "### Step 4: Early ASHAScheduler for early stopping\n",
     "\n",
-    "Currently, in our example above, Tune samples 10 different hyperparameter configurations and trains a full XGBoost on all of them. In our small example, training is very fast. However, if training were done on a large datasetm it would\n",
+    "Currently, in our example above, Tune samples 10 different hyperparameter configurations and trains a full XGBoost on all of them. In our small example, training is very fast. However, if training were done on a large dataset, it would\n",
     "take much longer and a significant amount of computer resources would be spent on trials that would eventually show a bad performance, e.g., a low accuracy. It would be good if we could identify these trials early and stop them, so we don’t waste any resources.\n",
     "\n",
     "This is where Tune’s Schedulers shine. A Tune `TrialScheduler` is responsible for starting and stopping trials. Tune implements a number of different schedulers, each described in the Tune documentation. For our example, we will use the `AsyncHyperBandScheduler` or `ASHAScheduler`.\n",
@@ -1076,7 +1076,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
