Fix path for local image

--- a/ex_01_remote_funcs.ipynb
+++ b/ex_01_remote_funcs.ipynb
@@ -253,7 +253,7 @@
    "source": [
     "### Example 2: Adding two np arrays\n",
     "\n",
-    "<img src=\"../images/task_api_add_array.png\" width=\"60%\" height=\"40%\">"
+    "<img src=\"./images/task_api_add_array.png\" width=\"60%\" height=\"40%\">"
    ]
   },
   {
