--- a/ex_04_model_serving_challenges.ipynb
+++ b/ex_04_model_serving_challenges.ipynb
@@ -147,17 +147,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-06-09 13:48:15,513\tINFO services.py:1456 -- View the Ray dashboard at \u001b[1m\u001b[32mhttp://127.0.0.1:8265\u001b[39m\u001b[22m\n",
-      "\u001b[2m\u001b[36m(ServeController pid=43769)\u001b[0m 2022-06-09 13:48:18,677\tINFO checkpoint_path.py:15 -- Using RayInternalKVStore for controller checkpoint and recovery.\n",
-      "\u001b[2m\u001b[36m(ServeController pid=43769)\u001b[0m 2022-06-09 13:48:18,782\tINFO http_state.py:106 -- Starting HTTP proxy with name 'SERVE_CONTROLLER_ACTOR:EnVZZA:SERVE_PROXY_ACTOR-node:127.0.0.1-0' on node 'node:127.0.0.1-0' listening on '127.0.0.1:8000'\n",
-      "2022-06-09 13:48:19,518\tINFO api.py:794 -- Started Serve instance in namespace 'serve'.\n",
-      "\u001b[2m\u001b[36m(HTTPProxyActor pid=43773)\u001b[0m INFO:     Started server process [43773]\n"
+      "2022-06-09 13:48:53,597\tINFO services.py:1456 -- View the Ray dashboard at \u001b[1m\u001b[32mhttp://127.0.0.1:8265\u001b[39m\u001b[22m\n",
+      "\u001b[2m\u001b[36m(ServeController pid=43978)\u001b[0m 2022-06-09 13:48:56,161\tINFO checkpoint_path.py:15 -- Using RayInternalKVStore for controller checkpoint and recovery.\n",
+      "\u001b[2m\u001b[36m(ServeController pid=43978)\u001b[0m 2022-06-09 13:48:56,267\tINFO http_state.py:106 -- Starting HTTP proxy with name 'SERVE_CONTROLLER_ACTOR:zRNDqZ:SERVE_PROXY_ACTOR-node:127.0.0.1-0' on node 'node:127.0.0.1-0' listening on '127.0.0.1:8000'\n",
+      "2022-06-09 13:48:56,968\tINFO api.py:794 -- Started Serve instance in namespace 'serve'.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<ray.serve.api.Client at 0x7faa0fedc220>"
+       "<ray.serve.api.Client at 0x7f88ccdc89a0>"
       ]
      },
      "execution_count": 2,
@@ -231,9 +230,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-06-09 13:48:19,541\tINFO api.py:615 -- Updating deployment 'hello'. component=serve deployment=hello\n",
-      "\u001b[2m\u001b[36m(ServeController pid=43769)\u001b[0m 2022-06-09 13:48:19,618\tINFO deployment_state.py:1216 -- Adding 1 replicas to deployment 'hello'. component=serve deployment=hello\n",
-      "2022-06-09 13:48:20,548\tINFO api.py:630 -- Deployment 'hello' is ready at `http://127.0.0.1:8000/hello`. component=serve deployment=hello\n"
+      "2022-06-09 13:48:56,989\tINFO api.py:615 -- Updating deployment 'hello'. component=serve deployment=hello\n",
+      "\u001b[2m\u001b[36m(ServeController pid=43978)\u001b[0m 2022-06-09 13:48:56,999\tINFO deployment_state.py:1216 -- Adding 1 replicas to deployment 'hello'. component=serve deployment=hello\n",
+      "\u001b[2m\u001b[36m(HTTPProxyActor pid=43980)\u001b[0m INFO:     Started server process [43980]\n",
+      "2022-06-09 13:48:57,997\tINFO api.py:630 -- Deployment 'hello' is ready at `http://127.0.0.1:8000/hello`. component=serve deployment=hello\n"
      ]
     }
    ],
@@ -319,9 +319,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-06-09 13:48:20,642\tINFO api.py:615 -- Updating deployment 'SimpleModel'. component=serve deployment=SimpleModel\n",
-      "\u001b[2m\u001b[36m(ServeController pid=43769)\u001b[0m 2022-06-09 13:48:20,677\tINFO deployment_state.py:1216 -- Adding 1 replicas to deployment 'SimpleModel'. component=serve deployment=SimpleModel\n",
-      "2022-06-09 13:48:21,649\tINFO api.py:630 -- Deployment 'SimpleModel' is ready at `http://127.0.0.1:8000/SimpleModel`. component=serve deployment=SimpleModel\n"
+      "2022-06-09 13:48:58,085\tINFO api.py:615 -- Updating deployment 'SimpleModel'. component=serve deployment=SimpleModel\n",
+      "\u001b[2m\u001b[36m(ServeController pid=43978)\u001b[0m 2022-06-09 13:48:58,148\tINFO deployment_state.py:1216 -- Adding 1 replicas to deployment 'SimpleModel'. component=serve deployment=SimpleModel\n",
+      "2022-06-09 13:48:59,091\tINFO api.py:630 -- Deployment 'SimpleModel' is ready at `http://127.0.0.1:8000/SimpleModel`. component=serve deployment=SimpleModel\n"
      ]
     }
    ],
@@ -347,41 +347,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "prediction  : Task Error. Traceback: \u001b[36mray::RayServeWrappedReplica.handle_request()\u001b[39m (pid=43779, ip=127.0.0.1)\n",
-      "  File \"/Users/archit/anaconda3/envs/ray-core-serve-tutorial/lib/python3.8/site-packages/ray/serve/utils.py\", line 243, in wrap_to_ray_error\n",
-      "    raise exception\n",
-      "  File \"/Users/archit/anaconda3/envs/ray-core-serve-tutorial/lib/python3.8/site-packages/ray/serve/replica.py\", line 396, in invoke_single\n",
-      "    result = await method_to_call(*args, **kwargs)\n",
-      "  File \"/var/folders/75/7kpb8gj57k11df4ksj9lnt900000gn/T/ipykernel_43687/3639668165.py\", line 17, in __call__\n",
-      "TypeError: predict() takes 1 positional argument but 2 were given.\n",
-      "prediction  : Task Error. Traceback: \u001b[36mray::RayServeWrappedReplica.handle_request()\u001b[39m (pid=43779, ip=127.0.0.1)\n",
-      "  File \"/Users/archit/anaconda3/envs/ray-core-serve-tutorial/lib/python3.8/site-packages/ray/serve/utils.py\", line 243, in wrap_to_ray_error\n",
-      "    raise exception\n",
-      "  File \"/Users/archit/anaconda3/envs/ray-core-serve-tutorial/lib/python3.8/site-packages/ray/serve/replica.py\", line 396, in invoke_single\n",
-      "    result = await method_to_call(*args, **kwargs)\n",
-      "  File \"/var/folders/75/7kpb8gj57k11df4ksj9lnt900000gn/T/ipykernel_43687/3639668165.py\", line 17, in __call__\n",
-      "TypeError: predict() takes 1 positional argument but 2 were given.\n",
-      "prediction  : Task Error. Traceback: \u001b[36mray::RayServeWrappedReplica.handle_request()\u001b[39m (pid=43779, ip=127.0.0.1)\n",
-      "  File \"/Users/archit/anaconda3/envs/ray-core-serve-tutorial/lib/python3.8/site-packages/ray/serve/utils.py\", line 243, in wrap_to_ray_error\n",
-      "    raise exception\n",
-      "  File \"/Users/archit/anaconda3/envs/ray-core-serve-tutorial/lib/python3.8/site-packages/ray/serve/replica.py\", line 396, in invoke_single\n",
-      "    result = await method_to_call(*args, **kwargs)\n",
-      "  File \"/var/folders/75/7kpb8gj57k11df4ksj9lnt900000gn/T/ipykernel_43687/3639668165.py\", line 17, in __call__\n",
-      "TypeError: predict() takes 1 positional argument but 2 were given.\n",
-      "prediction  : Task Error. Traceback: \u001b[36mray::RayServeWrappedReplica.handle_request()\u001b[39m (pid=43779, ip=127.0.0.1)\n",
-      "  File \"/Users/archit/anaconda3/envs/ray-core-serve-tutorial/lib/python3.8/site-packages/ray/serve/utils.py\", line 243, in wrap_to_ray_error\n",
-      "    raise exception\n",
-      "  File \"/Users/archit/anaconda3/envs/ray-core-serve-tutorial/lib/python3.8/site-packages/ray/serve/replica.py\", line 396, in invoke_single\n",
-      "    result = await method_to_call(*args, **kwargs)\n",
-      "  File \"/var/folders/75/7kpb8gj57k11df4ksj9lnt900000gn/T/ipykernel_43687/3639668165.py\", line 17, in __call__\n",
-      "TypeError: predict() takes 1 positional argument but 2 were given.\n",
-      "prediction  : Task Error. Traceback: \u001b[36mray::RayServeWrappedReplica.handle_request()\u001b[39m (pid=43779, ip=127.0.0.1)\n",
-      "  File \"/Users/archit/anaconda3/envs/ray-core-serve-tutorial/lib/python3.8/site-packages/ray/serve/utils.py\", line 243, in wrap_to_ray_error\n",
-      "    raise exception\n",
-      "  File \"/Users/archit/anaconda3/envs/ray-core-serve-tutorial/lib/python3.8/site-packages/ray/serve/replica.py\", line 396, in invoke_single\n",
-      "    result = await method_to_call(*args, **kwargs)\n",
-      "  File \"/var/folders/75/7kpb8gj57k11df4ksj9lnt900000gn/T/ipykernel_43687/3639668165.py\", line 17, in __call__\n",
-      "TypeError: predict() takes 1 positional argument but 2 were given.\n"
+      "prediction  : {\n",
+      "  \"prediction\": 1.0328321158383027\n",
+      "}\n",
+      "prediction  : {\n",
+      "  \"prediction\": 1.430548330092837\n",
+      "}\n",
+      "prediction  : {\n",
+      "  \"prediction\": 1.0477783571437786\n",
+      "}\n",
+      "prediction  : {\n",
+      "  \"prediction\": 1.0455041149230682\n",
+      "}\n",
+      "prediction  : {\n",
+      "  \"prediction\": 1.0260049283560289\n",
+      "}\n"
      ]
     }
    ],
@@ -504,12 +484,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-06-09 13:48:21,720\tINFO api.py:615 -- Updating deployment 'rep-1'. component=serve deployment=rep-1\n",
-      "\u001b[2m\u001b[36m(ServeController pid=43769)\u001b[0m 2022-06-09 13:48:21,724\tINFO deployment_state.py:1216 -- Adding 2 replicas to deployment 'rep-1'. component=serve deployment=rep-1\n",
-      "2022-06-09 13:48:22,727\tINFO api.py:630 -- Deployment 'rep-1' is ready at `http://127.0.0.1:8000/rep-1`. component=serve deployment=rep-1\n",
-      "2022-06-09 13:48:22,731\tINFO api.py:615 -- Updating deployment 'rep-2'. component=serve deployment=rep-2\n",
-      "\u001b[2m\u001b[36m(ServeController pid=43769)\u001b[0m 2022-06-09 13:48:22,778\tINFO deployment_state.py:1216 -- Adding 2 replicas to deployment 'rep-2'. component=serve deployment=rep-2\n",
-      "2022-06-09 13:48:23,739\tINFO api.py:630 -- Deployment 'rep-2' is ready at `http://127.0.0.1:8000/rep-2`. component=serve deployment=rep-2\n"
+      "2022-06-09 13:48:59,154\tINFO api.py:615 -- Updating deployment 'rep-1'. component=serve deployment=rep-1\n",
+      "\u001b[2m\u001b[36m(ServeController pid=43978)\u001b[0m 2022-06-09 13:48:59,190\tINFO deployment_state.py:1216 -- Adding 2 replicas to deployment 'rep-1'. component=serve deployment=rep-1\n",
+      "2022-06-09 13:49:00,161\tINFO api.py:630 -- Deployment 'rep-1' is ready at `http://127.0.0.1:8000/rep-1`. component=serve deployment=rep-1\n",
+      "2022-06-09 13:49:00,165\tINFO api.py:615 -- Updating deployment 'rep-2'. component=serve deployment=rep-2\n",
+      "\u001b[2m\u001b[36m(ServeController pid=43978)\u001b[0m 2022-06-09 13:49:00,239\tINFO deployment_state.py:1216 -- Adding 2 replicas to deployment 'rep-2'. component=serve deployment=rep-2\n",
+      "2022-06-09 13:49:01,171\tINFO api.py:630 -- Deployment 'rep-2' is ready at `http://127.0.0.1:8000/rep-2`. component=serve deployment=rep-2\n"
      ]
     }
    ],
@@ -558,27 +538,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-06-09 13:48:23,755\tWARNING api.py:485 -- You are retrieving a sync handle inside an asyncio loop. Try getting client.get_handle(.., sync=False) to get better performance. Learn more at https://docs.ray.io/en/master/serve/http-servehandle.html#sync-and-async-handles\n"
+      "2022-06-09 13:49:01,188\tWARNING api.py:485 -- You are retrieving a sync handle inside an asyncio loop. Try getting client.get_handle(.., sync=False) to get better performance. Learn more at https://docs.ray.io/en/master/serve/http-servehandle.html#sync-and-async-handles\n",
+      "2022-06-09 13:49:01,201\tWARNING api.py:485 -- You are retrieving a sync handle inside an asyncio loop. Try getting client.get_handle(.., sync=False) to get better performance. Learn more at https://docs.ray.io/en/master/serve/http-servehandle.html#sync-and-async-handles\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "handle name : rep-1\n"
-     ]
-    },
-    {
-     "ename": "RayTaskError(NameError)",
-     "evalue": "\u001b[36mray::RayServeWrappedReplica.handle_request()\u001b[39m (pid=43788, ip=127.0.0.1)\n  File \"/Users/archit/anaconda3/envs/ray-core-serve-tutorial/lib/python3.8/site-packages/ray/serve/utils.py\", line 243, in wrap_to_ray_error\n    raise exception\n  File \"/Users/archit/anaconda3/envs/ray-core-serve-tutorial/lib/python3.8/site-packages/ray/serve/replica.py\", line 400, in invoke_single\n    result = await method_to_call()\n  File \"/var/folders/75/7kpb8gj57k11df4ksj9lnt900000gn/T/ipykernel_43687/470044568.py\", line 15, in predict\nNameError: name 'self' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRayTaskError(NameError)\u001b[0m                   Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [14]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m handle \u001b[38;5;241m=\u001b[39m serve\u001b[38;5;241m.\u001b[39mget_deployment(d_name)\u001b[38;5;241m.\u001b[39mget_handle()\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhandle name : \u001b[39m\u001b[38;5;132;01m{\u001b[39;00md_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mprediction  : \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mray\u001b[38;5;241m.\u001b[39mget(handle\u001b[38;5;241m.\u001b[39mpredict\u001b[38;5;241m.\u001b[39mremote(random()))\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m2\u001b[39m)\n",
-      "File \u001b[0;32m~/anaconda3/envs/ray-core-serve-tutorial/lib/python3.8/site-packages/ray/_private/client_mode_hook.py:105\u001b[0m, in \u001b[0;36mclient_mode_hook.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    103\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m func\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minit\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m is_client_mode_enabled_by_default:\n\u001b[1;32m    104\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(ray, func\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m)(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m--> 105\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/anaconda3/envs/ray-core-serve-tutorial/lib/python3.8/site-packages/ray/worker.py:1809\u001b[0m, in \u001b[0;36mget\u001b[0;34m(object_refs, timeout)\u001b[0m\n\u001b[1;32m   1807\u001b[0m     worker\u001b[38;5;241m.\u001b[39mcore_worker\u001b[38;5;241m.\u001b[39mdump_object_store_memory_usage()\n\u001b[1;32m   1808\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(value, RayTaskError):\n\u001b[0;32m-> 1809\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m value\u001b[38;5;241m.\u001b[39mas_instanceof_cause()\n\u001b[1;32m   1810\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   1811\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m value\n",
-      "\u001b[0;31mRayTaskError(NameError)\u001b[0m: \u001b[36mray::RayServeWrappedReplica.handle_request()\u001b[39m (pid=43788, ip=127.0.0.1)\n  File \"/Users/archit/anaconda3/envs/ray-core-serve-tutorial/lib/python3.8/site-packages/ray/serve/utils.py\", line 243, in wrap_to_ray_error\n    raise exception\n  File \"/Users/archit/anaconda3/envs/ray-core-serve-tutorial/lib/python3.8/site-packages/ray/serve/replica.py\", line 400, in invoke_single\n    result = await method_to_call()\n  File \"/var/folders/75/7kpb8gj57k11df4ksj9lnt900000gn/T/ipykernel_43687/470044568.py\", line 15, in predict\nNameError: name 'self' is not defined"
+      "handle name : rep-1\n",
+      "prediction  : (pid: 44000); path: /model/rep-1.pkl; data: 0.320; prediction: 0.320\n",
+      "--\n",
+      "handle name : rep-2\n",
+      "prediction  : (pid: 44005); path: /model/rep-2.pkl; data: 0.887; prediction: 1.055\n",
+      "--\n",
+      "handle name : rep-1\n",
+      "prediction  : (pid: 43999); path: /model/rep-1.pkl; data: 0.429; prediction: 0.429\n",
+      "--\n",
+      "handle name : rep-2\n",
+      "prediction  : (pid: 44006); path: /model/rep-2.pkl; data: 0.867; prediction: 1.035\n",
+      "--\n"
      ]
     }
    ],
@@ -603,9 +582,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "handle name : rep-1\n",
+      "prediction  : (pid: 44000); path: /model/rep-1.pkl; data: 0.335; prediction: 0.335\n",
+      "handle name : rep-2\n",
+      "prediction  : (pid: 44005); path: /model/rep-2.pkl; data: 0.309; prediction: 0.309\n",
+      "handle name : rep-1\n",
+      "prediction  : (pid: 43999); path: /model/rep-1.pkl; data: 0.991; prediction: 1.160\n",
+      "handle name : rep-2\n",
+      "prediction  : (pid: 44006); path: /model/rep-2.pkl; data: 0.072; prediction: 0.072\n"
+     ]
+    }
+   ],
    "source": [
     "for _ in range(2):\n",
     "    for d_name in [\"rep-1\", \"rep-2\"]:\n",
@@ -624,9 +618,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m\u001b[36m(ServeController pid=43978)\u001b[0m 2022-06-09 13:49:01,287\tINFO deployment_state.py:1242 -- Removing 1 replicas from deployment 'hello'. component=serve deployment=hello\n",
+      "\u001b[2m\u001b[36m(ServeController pid=43978)\u001b[0m 2022-06-09 13:49:01,290\tINFO deployment_state.py:1242 -- Removing 1 replicas from deployment 'SimpleModel'. component=serve deployment=SimpleModel\n",
+      "\u001b[2m\u001b[36m(ServeController pid=43978)\u001b[0m 2022-06-09 13:49:01,293\tINFO deployment_state.py:1242 -- Removing 2 replicas from deployment 'rep-1'. component=serve deployment=rep-1\n",
+      "\u001b[2m\u001b[36m(ServeController pid=43978)\u001b[0m 2022-06-09 13:49:01,297\tINFO deployment_state.py:1242 -- Removing 2 replicas from deployment 'rep-2'. component=serve deployment=rep-2\n"
+     ]
+    }
+   ],
    "source": [
     "serve.shutdown()"
    ]
