--- a/ex_04_model_serving_challenges.ipynb
+++ b/ex_04_model_serving_challenges.ipynb
@@ -147,16 +147,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-06-09 13:48:53,597\tINFO services.py:1456 -- View the Ray dashboard at \u001b[1m\u001b[32mhttp://127.0.0.1:8265\u001b[39m\u001b[22m\n",
-      "\u001b[2m\u001b[36m(ServeController pid=43978)\u001b[0m 2022-06-09 13:48:56,161\tINFO checkpoint_path.py:15 -- Using RayInternalKVStore for controller checkpoint and recovery.\n",
-      "\u001b[2m\u001b[36m(ServeController pid=43978)\u001b[0m 2022-06-09 13:48:56,267\tINFO http_state.py:106 -- Starting HTTP proxy with name 'SERVE_CONTROLLER_ACTOR:zRNDqZ:SERVE_PROXY_ACTOR-node:127.0.0.1-0' on node 'node:127.0.0.1-0' listening on '127.0.0.1:8000'\n",
-      "2022-06-09 13:48:56,968\tINFO api.py:794 -- Started Serve instance in namespace 'serve'.\n"
+      "2022-06-09 13:52:38,952\tINFO services.py:1456 -- View the Ray dashboard at \u001b[1m\u001b[32mhttp://127.0.0.1:8266\u001b[39m\u001b[22m\n",
+      "\u001b[2m\u001b[36m(ServeController pid=45346)\u001b[0m 2022-06-09 13:52:41,931\tINFO checkpoint_path.py:15 -- Using RayInternalKVStore for controller checkpoint and recovery.\n",
+      "\u001b[2m\u001b[36m(ServeController pid=45346)\u001b[0m 2022-06-09 13:52:42,037\tINFO http_state.py:106 -- Starting HTTP proxy with name 'SERVE_CONTROLLER_ACTOR:weYObT:SERVE_PROXY_ACTOR-node:127.0.0.1-0' on node 'node:127.0.0.1-0' listening on '127.0.0.1:8000'\n",
+      "2022-06-09 13:52:42,824\tINFO api.py:794 -- Started Serve instance in namespace 'serve'.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<ray.serve.api.Client at 0x7f88ccdc89a0>"
+       "<ray.serve.api.Client at 0x7f8072706940>"
       ]
      },
      "execution_count": 2,
@@ -230,10 +230,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-06-09 13:48:56,989\tINFO api.py:615 -- Updating deployment 'hello'. component=serve deployment=hello\n",
-      "\u001b[2m\u001b[36m(ServeController pid=43978)\u001b[0m 2022-06-09 13:48:56,999\tINFO deployment_state.py:1216 -- Adding 1 replicas to deployment 'hello'. component=serve deployment=hello\n",
-      "\u001b[2m\u001b[36m(HTTPProxyActor pid=43980)\u001b[0m INFO:     Started server process [43980]\n",
-      "2022-06-09 13:48:57,997\tINFO api.py:630 -- Deployment 'hello' is ready at `http://127.0.0.1:8000/hello`. component=serve deployment=hello\n"
+      "\u001b[2m\u001b[36m(HTTPProxyActor pid=45350)\u001b[0m INFO:     Started server process [45350]\n",
+      "2022-06-09 13:52:42,850\tINFO api.py:615 -- Updating deployment 'hello'. component=serve deployment=hello\n",
+      "\u001b[2m\u001b[36m(ServeController pid=45346)\u001b[0m 2022-06-09 13:52:42,878\tINFO deployment_state.py:1216 -- Adding 1 replicas to deployment 'hello'. component=serve deployment=hello\n",
+      "2022-06-09 13:52:43,857\tINFO api.py:630 -- Deployment 'hello' is ready at `http://127.0.0.1:8000/hello`. component=serve deployment=hello\n"
      ]
     }
    ],
@@ -319,9 +319,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-06-09 13:48:58,085\tINFO api.py:615 -- Updating deployment 'SimpleModel'. component=serve deployment=SimpleModel\n",
-      "\u001b[2m\u001b[36m(ServeController pid=43978)\u001b[0m 2022-06-09 13:48:58,148\tINFO deployment_state.py:1216 -- Adding 1 replicas to deployment 'SimpleModel'. component=serve deployment=SimpleModel\n",
-      "2022-06-09 13:48:59,091\tINFO api.py:630 -- Deployment 'SimpleModel' is ready at `http://127.0.0.1:8000/SimpleModel`. component=serve deployment=SimpleModel\n"
+      "2022-06-09 13:52:44,013\tINFO api.py:615 -- Updating deployment 'SimpleModel'. component=serve deployment=SimpleModel\n",
+      "\u001b[2m\u001b[36m(ServeController pid=45346)\u001b[0m 2022-06-09 13:52:44,040\tINFO deployment_state.py:1216 -- Adding 1 replicas to deployment 'SimpleModel'. component=serve deployment=SimpleModel\n",
+      "2022-06-09 13:52:45,023\tINFO api.py:630 -- Deployment 'SimpleModel' is ready at `http://127.0.0.1:8000/SimpleModel`. component=serve deployment=SimpleModel\n"
      ]
     }
    ],
@@ -348,19 +348,19 @@
      "output_type": "stream",
      "text": [
       "prediction  : {\n",
-      "  \"prediction\": 1.0328321158383027\n",
+      "  \"prediction\": 1.4527433070927496\n",
       "}\n",
       "prediction  : {\n",
-      "  \"prediction\": 1.430548330092837\n",
+      "  \"prediction\": 1.0346779048463057\n",
       "}\n",
       "prediction  : {\n",
-      "  \"prediction\": 1.0477783571437786\n",
+      "  \"prediction\": 1.3609898975698373\n",
       "}\n",
       "prediction  : {\n",
-      "  \"prediction\": 1.0455041149230682\n",
+      "  \"prediction\": 1.1078432172577823\n",
       "}\n",
       "prediction  : {\n",
-      "  \"prediction\": 1.0260049283560289\n",
+      "  \"prediction\": 1.000035298626535\n",
       "}\n"
      ]
     }
@@ -484,12 +484,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-06-09 13:48:59,154\tINFO api.py:615 -- Updating deployment 'rep-1'. component=serve deployment=rep-1\n",
-      "\u001b[2m\u001b[36m(ServeController pid=43978)\u001b[0m 2022-06-09 13:48:59,190\tINFO deployment_state.py:1216 -- Adding 2 replicas to deployment 'rep-1'. component=serve deployment=rep-1\n",
-      "2022-06-09 13:49:00,161\tINFO api.py:630 -- Deployment 'rep-1' is ready at `http://127.0.0.1:8000/rep-1`. component=serve deployment=rep-1\n",
-      "2022-06-09 13:49:00,165\tINFO api.py:615 -- Updating deployment 'rep-2'. component=serve deployment=rep-2\n",
-      "\u001b[2m\u001b[36m(ServeController pid=43978)\u001b[0m 2022-06-09 13:49:00,239\tINFO deployment_state.py:1216 -- Adding 2 replicas to deployment 'rep-2'. component=serve deployment=rep-2\n",
-      "2022-06-09 13:49:01,171\tINFO api.py:630 -- Deployment 'rep-2' is ready at `http://127.0.0.1:8000/rep-2`. component=serve deployment=rep-2\n"
+      "2022-06-09 13:52:45,089\tINFO api.py:615 -- Updating deployment 'rep-1'. component=serve deployment=rep-1\n",
+      "\u001b[2m\u001b[36m(ServeController pid=45346)\u001b[0m 2022-06-09 13:52:45,097\tINFO deployment_state.py:1216 -- Adding 2 replicas to deployment 'rep-1'. component=serve deployment=rep-1\n",
+      "2022-06-09 13:52:46,097\tINFO api.py:630 -- Deployment 'rep-1' is ready at `http://127.0.0.1:8000/rep-1`. component=serve deployment=rep-1\n",
+      "2022-06-09 13:52:46,102\tINFO api.py:615 -- Updating deployment 'rep-2'. component=serve deployment=rep-2\n",
+      "\u001b[2m\u001b[36m(ServeController pid=45346)\u001b[0m 2022-06-09 13:52:46,153\tINFO deployment_state.py:1216 -- Adding 2 replicas to deployment 'rep-2'. component=serve deployment=rep-2\n",
+      "2022-06-09 13:52:47,111\tINFO api.py:630 -- Deployment 'rep-2' is ready at `http://127.0.0.1:8000/rep-2`. component=serve deployment=rep-2\n"
      ]
     }
    ],
@@ -538,8 +538,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-06-09 13:49:01,188\tWARNING api.py:485 -- You are retrieving a sync handle inside an asyncio loop. Try getting client.get_handle(.., sync=False) to get better performance. Learn more at https://docs.ray.io/en/master/serve/http-servehandle.html#sync-and-async-handles\n",
-      "2022-06-09 13:49:01,201\tWARNING api.py:485 -- You are retrieving a sync handle inside an asyncio loop. Try getting client.get_handle(.., sync=False) to get better performance. Learn more at https://docs.ray.io/en/master/serve/http-servehandle.html#sync-and-async-handles\n"
+      "2022-06-09 13:52:47,128\tWARNING api.py:485 -- You are retrieving a sync handle inside an asyncio loop. Try getting client.get_handle(.., sync=False) to get better performance. Learn more at https://docs.ray.io/en/master/serve/http-servehandle.html#sync-and-async-handles\n",
+      "2022-06-09 13:52:47,141\tWARNING api.py:485 -- You are retrieving a sync handle inside an asyncio loop. Try getting client.get_handle(.., sync=False) to get better performance. Learn more at https://docs.ray.io/en/master/serve/http-servehandle.html#sync-and-async-handles\n"
      ]
     },
     {
@@ -547,16 +547,16 @@
      "output_type": "stream",
      "text": [
       "handle name : rep-1\n",
-      "prediction  : (pid: 44000); path: /model/rep-1.pkl; data: 0.320; prediction: 0.320\n",
+      "prediction  : (pid: 45382); path: /model/rep-1.pkl; data: 0.691; prediction: 0.693\n",
       "--\n",
       "handle name : rep-2\n",
-      "prediction  : (pid: 44005); path: /model/rep-2.pkl; data: 0.887; prediction: 1.055\n",
+      "prediction  : (pid: 45392); path: /model/rep-2.pkl; data: 0.394; prediction: 0.394\n",
       "--\n",
       "handle name : rep-1\n",
-      "prediction  : (pid: 43999); path: /model/rep-1.pkl; data: 0.429; prediction: 0.429\n",
+      "prediction  : (pid: 45383); path: /model/rep-1.pkl; data: 0.235; prediction: 0.235\n",
       "--\n",
       "handle name : rep-2\n",
-      "prediction  : (pid: 44006); path: /model/rep-2.pkl; data: 0.867; prediction: 1.035\n",
+      "prediction  : (pid: 45393); path: /model/rep-2.pkl; data: 0.078; prediction: 0.078\n",
       "--\n"
      ]
     }
@@ -590,13 +590,13 @@
      "output_type": "stream",
      "text": [
       "handle name : rep-1\n",
-      "prediction  : (pid: 44000); path: /model/rep-1.pkl; data: 0.335; prediction: 0.335\n",
+      "prediction  : (pid: 45382); path: /model/rep-1.pkl; data: 0.343; prediction: 0.343\n",
       "handle name : rep-2\n",
-      "prediction  : (pid: 44005); path: /model/rep-2.pkl; data: 0.309; prediction: 0.309\n",
+      "prediction  : (pid: 45393); path: /model/rep-2.pkl; data: 0.119; prediction: 0.119\n",
       "handle name : rep-1\n",
-      "prediction  : (pid: 43999); path: /model/rep-1.pkl; data: 0.991; prediction: 1.160\n",
+      "prediction  : (pid: 45383); path: /model/rep-1.pkl; data: 0.639; prediction: 0.641\n",
       "handle name : rep-2\n",
-      "prediction  : (pid: 44006); path: /model/rep-2.pkl; data: 0.072; prediction: 0.072\n"
+      "prediction  : (pid: 45392); path: /model/rep-2.pkl; data: 0.066; prediction: 0.066\n"
      ]
     }
    ],
@@ -625,10 +625,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[2m\u001b[36m(ServeController pid=43978)\u001b[0m 2022-06-09 13:49:01,287\tINFO deployment_state.py:1242 -- Removing 1 replicas from deployment 'hello'. component=serve deployment=hello\n",
-      "\u001b[2m\u001b[36m(ServeController pid=43978)\u001b[0m 2022-06-09 13:49:01,290\tINFO deployment_state.py:1242 -- Removing 1 replicas from deployment 'SimpleModel'. component=serve deployment=SimpleModel\n",
-      "\u001b[2m\u001b[36m(ServeController pid=43978)\u001b[0m 2022-06-09 13:49:01,293\tINFO deployment_state.py:1242 -- Removing 2 replicas from deployment 'rep-1'. component=serve deployment=rep-1\n",
-      "\u001b[2m\u001b[36m(ServeController pid=43978)\u001b[0m 2022-06-09 13:49:01,297\tINFO deployment_state.py:1242 -- Removing 2 replicas from deployment 'rep-2'. component=serve deployment=rep-2\n"
+      "\u001b[2m\u001b[36m(ServeController pid=45346)\u001b[0m 2022-06-09 13:52:47,214\tINFO deployment_state.py:1242 -- Removing 1 replicas from deployment 'hello'. component=serve deployment=hello\n",
+      "\u001b[2m\u001b[36m(ServeController pid=45346)\u001b[0m 2022-06-09 13:52:47,217\tINFO deployment_state.py:1242 -- Removing 1 replicas from deployment 'SimpleModel'. component=serve deployment=SimpleModel\n",
+      "\u001b[2m\u001b[36m(ServeController pid=45346)\u001b[0m 2022-06-09 13:52:47,221\tINFO deployment_state.py:1242 -- Removing 2 replicas from deployment 'rep-1'. component=serve deployment=rep-1\n",
+      "\u001b[2m\u001b[36m(ServeController pid=45346)\u001b[0m 2022-06-09 13:52:47,225\tINFO deployment_state.py:1242 -- Removing 2 replicas from deployment 'rep-2'. component=serve deployment=rep-2\n"
      ]
     }
    ],
